# rtu-mirea-timetable

./: .dockerignore  .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  celeryworker.dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  prestart.sh  pyproject.toml  requirements.txt  runserver.py  worker.dockerfile
.github/workflows/: a.yml  check.yml  clear-cache.yml  clear-prod-broker.yml  clear-prod-db.yml  copy.yml  deplo-v2.yml  deploy-promtail.yml  deploy.yml  fix.yml  logs.yml  migrate-prod-db.yml
alembic/: env.py
alembic/versions/: 0d908209ac89_first_revision.py  45bb8c7682d2_default_value_for_max_week.py  e116804f3720_.py  f3638a25d218_add_settings_table.py
app/: __init__.py  config.py  exceptions.py  firebase_client.py  main.py
app/certificates/: trace.cer
app/config/: __init__.py  config.py
app/database/: __init__.py  connection.py  facade.py  interface.py
app/firebase/: README.md
app/models/: __init__.py  campus.py  degree.py  discipline.py  exceptions.py  exeptions.py  group.py  institute.py  lesson.py  lesson_call.py  lesson_type.py  lks_schedule.py  period.py  room.py  settings.py  teacher.py  utils.py  version.py  workload.py
app/parser/: schedule.py
app/routers/: campuses.py  client.py  degrees.py  disciplines.py  groups.py  institutes.py  lessons.py  lks.py  periods.py  rooms.py  teachers.py  utils.py
app/services/: campuses.py  crud_schedule.py  groups.py  push_notifications.py
app/templates/: group_schedule.html  groups.html
app/utils/: cache.py
docs/: README.md  files.json  расписание колледж.xlsx
etc/: traefik.yml
public/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs
public/src/: useNotifyParentAboutDocumentSize.ts  utils.ts
src/: Makefile  alembic.ini  celerybeat-schedule  prestart.sh  pyproject.toml  start-reload.sh  worker-start.sh
src/alembic/: env.py
src/alembic/versions/: 786b5777f282_first_revision.py
src/app/: main.py  utils.py  worker.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: campuses.py  groups.py  rooms.py  schedule.py  utils.py
src/app/core/: celery_app.py  config.py
src/app/core/schedule/: parser.py
src/app/crud/: crud_schedule.py
src/app/db/: base_class.py  connection.py  session.py
src/app/models/: __init__.py  campus.py  degree.py  discipline.py  group.py  institute.py  lesson.py  lesson_call.py  lesson_type.py  period.py  room.py  teacher.py
src/app/schemas/: __init__.py  discipline.py  group.py  lesson.py  room.py  schedule.py
src/app/services/: crud_schedule.py
tests/: conftest.py  data.py  db_setup.py
worker/: Dockerfile  __init__.py  tasks.py
(+56 files in other folders)
